codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__review_queues_user_messages_snapshot.snap
---
source: tui/src/chatwidget/tests/review_mode.rs
expression: normalize_snapshot_paths(term.backend().vt100().screen().contents())
---










✦ Working                                                     0s · Esc interrupt

• 1 retry at turn end
  ! Retry: Steer submitted while /review was running.
╭─────────────────────────────────────────────────────────────────── tab queue ╮
┃ ›                                                                            │
╰──────────────────────────────────────────────────────────────────────────────╯
  GPT 5.6 Sol · Default · /tmp/project
