codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__running_hooks_share_background_activity_row.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: "format!(\"80 columns:\\n{}\\n120 columns:\\n{}\", hook_status_frame(&chat, 80),\nhook_status_frame(&chat, 120),)"
---
80 columns:
"                                                                                "
"✦ Working · checking command policy                           0s · Esc interrupt"
"  └ Terminal running · /ps inspect · /stop terminate                            "
"                                                                                "
"╭─────────────────────────────────────────────────────────────────── tab queue ╮"
"┃ ›                                                                            │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"  GPT 5.6 Sol · Default · /tmp/project                                          "
120 columns:
"                                                                                                                        "
"✦ Working · checking command policy                                                                   0s · Esc interrupt"
"  └ Terminal running · /ps inspect · /stop terminate                                                                    "
"                                                                                                                        "
"╭─────────────────────────────────────────────────────────────────────────────────────────────────────────── tab queue ╮"
"┃ ›                                                                                                                    │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"  GPT 5.6 Sol · Default · /tmp/project                                                                                  "
